<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <artifactId>sqrl-flink-lib</artifactId>
  <groupId>com.datasqrl</groupId>
  <version>0.6.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <flink.version>1.19.0</flink.version>
    <postgres.version>42.5.0</postgres.version>
    <testcontainers.version>1.18.0</testcontainers.version>
  </properties>

  <modules>
    <module>sqrl-lib-common</module>
    <module>sqrl-secure</module>
    <module>sqrl-text</module>
    <module>sqrl-time</module>
    <module>sqrl-name</module>
    <module>sqrl-errors</module>
  </modules>

  <description>Parent pom</description>

  <url>https://www.datasqrl.com/</url>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Daniel Henneberger</name>
      <email>daniel@datasqrl.com</email>
      <url>https://github.com/henneberger</url>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:https://github.com/DataSQRL/sqrl.git</connection>
    <url>https://github.com/DataSQRL/sqrl</url>
    <developerConnection>scm:git:https://github.com/DataSQRL/sqrl.git</developerConnection>
    <tag>v0.5.0-RC3</tag>
  </scm>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.datasqrl</groupId>
        <artifactId>sqrl-lib-common</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.datasqrl</groupId>
        <artifactId>sqrl-secure</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.datasqrl</groupId>
        <artifactId>sqrl-text</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.datasqrl</groupId>
        <artifactId>sqrl-time</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.datasqrl</groupId>
        <artifactId>sqrl-vector</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.38</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
      <version>5.8.2</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
      <version>5.8.2</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.5</version>
        <executions>
          <execution>
            <phase>deploy</phase>
            <id>sign-artifacts</id>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9.1</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <phase>deploy</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <failOnError>false</failOnError>
        </configuration>
      </plugin>
<!--      <plugin>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <artifactId>maven-shade-plugin</artifactId>-->
<!--        <version>3.2.4</version>-->
<!--        <configuration>-->
<!--          <createDependencyReducedPom>false</createDependencyReducedPom>-->
<!--        </configuration>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <phase>package</phase>-->
<!--            <goals>-->
<!--              <goal>shade</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              <shadedArtifactAttached>true</shadedArtifactAttached>-->
<!--              <minimizeJar>false</minimizeJar>-->
<!--              <filters>-->
<!--                <filter>-->
<!--                  <artifact>*:*</artifact>-->
<!--                  <excludes>-->
<!--                    <exclude>META-INF/*.SF</exclude>-->
<!--                    <exclude>META-INF/*.DSA</exclude>-->
<!--                    <exclude>META-INF/*.RSA</exclude>-->
<!--                  </excludes>-->
<!--                </filter>-->
<!--              </filters>-->
<!--            </configuration>-->
<!--          </execution>-->
<!--        </executions>-->
<!--      </plugin>-->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.6.3</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <phase>package</phase>
            <configuration>
              <show>public</show>
              <failOnError>false</failOnError>
              <detectOfflineLinks>false</detectOfflineLinks>
              <doclint>all,-missing</doclint>
              <nohelp>true</nohelp>
              <excludePackageNames>*.internal.*,testutil,demo</excludePackageNames>
              <quiet>true</quiet>
            </configuration>
          </execution>
        </executions>
        <configuration>
          <failOnError>false</failOnError>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.6.3</version>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <goals>
                <goal>jar</goal>
              </goals>
              <phase>package</phase>
              <configuration>
                <show>public</show>
                <failOnError>false</failOnError>
                <detectOfflineLinks>false</detectOfflineLinks>
                <doclint>all,-missing</doclint>
                <nohelp>true</nohelp>
                <excludePackageNames>*.internal.*,testutil,demo</excludePackageNames>
                <quiet>true</quiet>
              </configuration>
            </execution>
          </executions>
          <configuration>
            <failOnError>false</failOnError>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.3</version>
          <configuration>
            <deployAtEnd>true</deployAtEnd>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
        <id>m2e</id>
        <activation>
            <property>
                <name>m2e.version</name>
            </property>
        </activation>
        <build>
            <directory>${project.basedir}/m2e-target</directory>
            <plugins>
              <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                  <execution>
                    <id>add-source</id>
                    <goals>
                      <goal>add-source</goal>
                    </goals>
                    <phase>generate-sources</phase>
                    <configuration>
                      <sources>
                        <source>target/generated-sources/annotations</source>
                        <source>target/generated-sources/java</source>
                      </sources>
                    </configuration>
                  </execution>
                  <execution>
                    <id>add-google-auto</id>
                    <goals>
                      <goal>add-resource</goal>
                    </goals>
                    <phase>generate-sources</phase>
                    <configuration>
                      <resources>
                        <resource>
                          <directory>target/classes</directory>
                          <excludes>
                            <exclude>**/*.class</exclude>
                          </excludes>
                        </resource>
                      </resources>
                    </configuration>
                  </execution>
                  <execution>
                    <id>add-test-source</id>
                    <goals>
                      <goal>add-test-source</goal>
                    </goals>
                    <phase>generate-test-sources</phase>
                    <configuration>
                      <sources>
                        <source>target/generated-test-sources/test-annotations</source>
                      </sources>
                    </configuration>
                  </execution>
                </executions>
              </plugin>
            </plugins>
        </build>
    </profile>
    <profile>
      <id>central</id>

      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.4.0</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <tokenAuth>true</tokenAuth>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <repositories>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/DataSQRL/flink-sql-runner</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>false</enabled>
      </releases>
    </repository>
  </repositories>

  <distributionManagement>
    <snapshotRepository>
      <id>github</id>
      <url>https://maven.pkg.github.com/DataSQRL/sqrl</url>
    </snapshotRepository>
  </distributionManagement>

</project>
